.. $Id$
.. $Author$
.. $Date$

Release Notes
=============

Dec. 20, 2019 Alex Olivas (aolivas@umd.edu)
-------------------------------------------
Combo Release V00-00-00

December 13, 2019 Alan Coleman (alanc@udel.edu)
-----------------------------------------------------
Release V01-10-02

- Log fatal if ``OutputName`` is not configured rather than falling back to the
  module instance name

September 15, 2017 Kevin Meagher (kmeagher@ulb.ac.be)
-----------------------------------------------------
Release V01-10-01

- Fix output name so that Params are also given the correct name in the
  case OutputName is not supplied

March 23, 2017 EKB (blaufuss@umd.edu)
-------------------------------------
Release V01-10-00

- Added OutputName parameter to I3SimpleFitter and I3IterativeFitter so we can
  stop using the module instance name as the name of the fit.
- I3IterativeFitter can now handle Python objects as services except for
  I3RandomService because of the default used GSL pseudo-random generators.
- Docs cleanup
- use icecube::serialization over boost::serialization
- Python 3 happiness


May 3, 2016 Alex Olivas (olivas@icecube.umd.edu)
------------------------------------------------

Release V01-09-03

- Example scripts were rewritten in modern python syntax.

  -- Jakob van Santen

- Example scripts don't need a X server anymore if executed with default
  options.

  -- Kai Krings

- Test scripts moved to new test directory and got a code cleaning; the
  `iceopt` module and the `fortytwo` test suite moved to
  `gulliver-modules/python`.

  -- Kai Krings

- A Sphinx documentation was added.

  -- Kai Krings

April 3, 2015 Meike de With (meike.de.with@desy.de)
---------------------------------------------------

Release V01-09-01

- Recognize I3_TESTDATA.
- Replace I3ParticleVectPtr by I3VectorI3ParticlePtr.

  -- Alex Olivas

- Filter hypothesis through a parametrization if one is provided. This makes